chore: client app added, docker compose added, ngnix added
