# src/auth/requests/sign-up.request.ts
@@ -1,3 +1,4 @@
+import { ApiProperty } from '@nestjs/swagger';
 import {
   IsAscii,
   IsNotEmpty,
@@ -5,35 +6,16 @@ import {
   MaxLength,
   MinLength,
 } from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
 import { AtLeastOneLetter } from '../validators/at-least-one-letter.decorator';
 import { AtLeastOneNumber } from '../validators/at-least-one-number.decorator';
 import { AtLeastOneSpecial } from '../validators/at-least-one-special.decorator';
+import { SignInRequest } from './sign-in.request';
 
-export class SignUpRequest {
+export class SignUpRequest extends SignInRequest {
   @IsAscii()
   @IsString()
-  @MinLength(4)
-  @MaxLength(32)
-  @ApiProperty({
-    description: 'The username of the user',
-    example: 'john',
-  })
-  username: string;
-
-  @IsAscii()
-  @IsString()
-  @IsNotEmpty()
-  @MinLength(8)
   @MaxLength(128)
-  @AtLeastOneNumber()
-  @AtLeastOneLetter()
-  @AtLeastOneSpecial()
-  @ApiProperty({
-    description: 'The password of the user',
-    example: 'password',
-  })
-  password: string;
+  name: string;
 
   @IsAscii()
   @IsString()
@@ -50,10 +32,12 @@ export class SignUpRequest {
   confirmPassword: string;
 
   constructor(payload: Partial<SignUpRequest>) {
+    super(payload);
+
     Object.assign(this, payload);
   }
 
-  static from(payload: Partial<SignUpRequest>): SignUpRequest {
+  static override from(payload: Partial<SignUpRequest>): SignUpRequest {
     return new SignUpRequest(payload);
   }
 
